client/components/domains/register-domain-step/style.scss
@import '@wordpress/base-styles/breakpoints';
@import '@wordpress/base-styles/mixins';

.register-domain-step__search {
	padding-bottom: 12px;

	&.register-domain-step__search-domain-step:not( .is-sticky ) {
		padding-bottom: 24px;

		@include breakpoint-deprecated( '>660px' ) {
			padding-top: 18px;

			.is-white-signup & {
				padding-top: 0;
				padding-bottom: 20px;
			}
		}
	}

	.card.register-domain-step__search-card {
		padding: 0;
		display: flex;
		align-items: center;
	}

	.search {
		margin-bottom: 0;

		&.is-refocused {
			animation: shake 0.5s both;
			box-shadow: 0 0 0 1px var( --color-neutral-light ), 0 2px 4px var( --color-neutral-10 );
		}
	}

	&.disabled {
		border-bottom: none; // so that bottom border is not there during google app dialog animation
		opacity: 0.7;
		transition: opacity, 0.3s, ease-in-out;
	}

	.search-card {
		margin-bottom: 0;
	}
}

.register-domain-step > .notice.register-domain-step__notice {
	margin-bottom: 12px;
}

.register-domain-step__example-prompt {
	font-size: 0.875rem;
	line-height: 20px;
	color: var( --studio-gray-40 );
	display: flex;
	align-items: center;
	margin: 0 20px;

	svg {
		fill: #a7aaad;
		margin-right: 13px;
	}

	@include break-xlarge {
		margin: 0;
	}
}

@keyframes shake {
	0%,
	100% {
		transform: translate3d( 0, 0, 0 );
	}

	10%,
	60% {
		transform: translate3d( -5px, 0, 0 );
	}

	30% {
		transform: translate3d( 5px, 0, 0 );
	}
}

.register-domain-step__filter-reset-notice {
	color: var( --color-primary );
	font-weight: 600;
	width: 100%;
	position: relative;
	margin-bottom: 0;

	border: 0;
	border-radius: 0;

	// from components/card/style.scss
	box-shadow: 0 0 0 1px rgba( var( --color-neutral-10-rgb ), 0.5 ),
		0 1px 2px var( --color-neutral-0 );

	// from components/domains/domain-suggestion/style
	// NOTE: easeOutExpo easing function from http://easings.net/#easeOutExpo
	transition: box-shadow 0.25s cubic-bezier( 0.19, 1, 0.22, 1 );

	&:hover {
		color: var( --color-primary );

		// from components/domains/domain-suggestion/style
		box-shadow: 0 0 0 1px var( --color-neutral-light );
	}
}

.register-domain-step__next-page {
	color: var( --color-link );
	display: flex;
	justify-content: center;
}

.register-domain-step {
	.button.is-active {
		background: var( --color-neutral-0 );
	}
}

button.register-domain-step__next-page-button {
	font-size: 0.875rem;
	font-weight: 500; /* stylelint-disable-line */
}

body.is-section-domains {
	.register-domain-step {
		button.register-domain-step__next-page-button {
			color: var( --color-link );
			border: none;
			box-shadow: none;
		}
	}
}

body.is-section-signup.is-white-signup {
	.domain-search-results__domain-availability .card {
		box-shadow: none;
		padding: 0;
		margin-bottom: 24px;
	}
	.register-domain-step__notice svg {
		margin: 0;
		padding: 0;
	}
	.register-domain-step__next-page {
		background: none;
		box-shadow: none;

		button.register-domain-step__next-page-button {
			padding: 0.57em 1.17em;
			border-radius: 4px; /* stylelint-disable-line */

			letter-spacing: 0.32px;
			line-height: 1.25rem;

			box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.05 );

			@include break-mobile {
				padding: 0.65em 2.8em;
			}
		}
	}
}

